# curtint128

./: CMakeLists.txt  Makefile  README.md  cuda_uint128.h
include/: cuda_uint128.h  utils.h
src/: test128.cu  test128cpu.cpp  test128cpu.cu  test128cuda.cu  utils.cpp
